@@ -1,10 +1,15 @@
-1-04-2024
+1-05-2025
+- reinstall garth
+- figured out luks encryption with interactive password
+
+
+1-04-2025
 - remove custom ghostty option in favor of HM
 - add rolling hyprland input
 - update swww and ghostty
 
 
-1-03-2024
+1-03-2025
 - add ghex to hm
 
 
